@@ -1,6 +1,8 @@
 ---
-version: 4
-datadir: data
+version: 5
+defaults:
+  datadir: data
+  data_hash: yaml_data
 hierarchy:
   - name: "common"
-    backend: yaml
+    path: "common.yaml"
